--- a/config.json
+++ b/config.json
@@ -2,12 +2,14 @@
     "blog_url": "https://nfe.io/blog",
     "company_context": {
         "industry": "Tecnologia",
-        "focus": "Automatização de processos",
-        "goal": "Educar o público sobre a importância da automação empresarial"
+        "focus": "Automatização de processos fiscais",
+        "goal": "Educar o público sobre a importância da automação fiscal para otimizações operacionais e redução de riscos"
     },
     "ideal_customer_profile": {
         "sector": "Pequenas e médias empresas",
         "revenue_range": "500k-10M",
-        "key_challenges": "Gestão financeira, otimização de processos, aumento de eficiência"
-    }
+        "key_challenges": "Gestão financeira, otimização de processos, aumento de eficiência, aumento de lucratividade"
+    },
+    "limit_posts": true,
+    "max_posts": 5
 }
